--- a/report.tex
+++ b/report.tex
@@ -520,7 +520,8 @@ $r_{ij3}(x) = x_{ij}w_{ij}$
 
 
 
-\subsection{Markoc Chain Monte Carlo (MCMC) Estimation}
+\subsection{Markov Chain Monte Carlo (MCMC) Estimation}
+Network evolution is believed to be too complicated for explicit calculation of probabilities or expected values \cite{Snijders2004}, however, it can be simulated.
 
 \subsubsection{Method of Moments}
 Using the method of moments (MoM)
