--- a/report.tex
+++ b/report.tex
@@ -521,10 +521,9 @@ $r_{ij3}(x) = x_{ij}w_{ij}$
 
 
 \subsection{Markov Chain Monte Carlo (MCMC) Estimation}
-Network evolution is believed to be too complicated for explicit calculation of probabilities or expected values \cite{Snijders2004}, however, it can be simulated.
+Network evolution can be simulated using a MCMC estimation method. The method of moments (MoM) can be used in the following way \cite{Snijders2004} \\
 
-\subsubsection{Method of Moments}
-Using the method of moments (MoM)
+Let $x^{obs}(t_m), m = 1, ..., M$ be the observed networks, and the objective function be $f_i(\beta, x) = \sum_{k=1}^L \beta_k s_{ik}(x)$. 
 
 
 \pagebreak
