--- a/report.tex
+++ b/report.tex
@@ -560,10 +560,10 @@ c_m = \norm{x^{obs}(t_{m+1})-x^{obs}(t_m)}
 \begin{equation}
 S_k = \sum_{m = 1}^{M-1}\sum_{i=1}^{g}s_{ik}(X_m(R_m))
 \end{equation}
-
 \end{enumerate}
 
-
+The simulation output will be the random variables $(S,R) = (S_1,...,S_L,R_1,...,R_{M-1})$. The desirable outcome for the estimation is the vector parameter $\hat{\beta}$ for which the expected and the observed vectors are the same. 
+% $\mathcal{E}_{\hat{\beta}}S = s^{obs}$.
 
 
 
