--- a/referenc.tex
+++ b/referenc.tex
@@ -127,7 +127,7 @@ Crowston, K., K. Wei, J. Howison, and A. Wiggins. ``\textit{Free/Libre open-sour
 
 \bibitem{SnijdersMCMCMLE} Snijders, T. AB. ``\textit{Markov chain Monte Carlo estimation of exponential random graph models,}'' Journal of Social Structure 3, no. 2: 1-40. 2002.
 
-\bibitem{Snijders2004} Snijders, Tom AB. ``\textit{Models for longitudinal network data,}'' Models and methods in social network analysis 1 (2005): 215-247. 
+\bibitem{Snijders2004} Snijders, Tom AB. ``\textit{Models for longitudinal network data,}'' Models and methods in social network analysis 1: 215-247. 2005.
 
 \bibitem{Snijders2010} Snijders, Tom AB., GG Van de Bunt, CEG Steglich, ``\textit{Introduction to stochastic actor-based models for network dynamics,}'' Social networks 32 (1), 44-60. 2010.
 
