--- a/report.tex
+++ b/report.tex
@@ -566,7 +566,7 @@ The simulation output will be the random variables $(S,R) = (S_1,...,S_L,R_1,...
 % $\mathcal{E}_{\hat{\beta}}S = s^{obs}$.
 
 \subsection{Hypothesis Testing}
-
+Using the actor-oriented model, t-type test of single parameters can be done using the parameter estimates and their standard errors. 
 
 
 
