--- a/report.tex
+++ b/report.tex
@@ -585,7 +585,8 @@ Given the parameter estimates $\hat{\beta_a}$ and $\hat{\beta_b}$, and their sta
 \frac{\hat{\beta_a}-\hat{\beta_b}}{\sqrt{S.E._a^2 + S.E._b^2}}
 \end{equation}
 
-
+\subsubsection{Multivariate Analysis of Variance (MANOVA)}
+To test the statistical significance of the mean differences between groups (in our case, the different categories of forking), we may use Multivariate Analysis of Variance (MANOVA) method. In cotrast to ANOVA, MANOVA method tests for the difference in two or more vectors of means. 
 
 
 
