--- a/report.tex
+++ b/report.tex
@@ -188,19 +188,19 @@ Specifically, our research objective and research questions are listed in the fo
 \label{ResearchObjective}
 \subsection*{What are the social patterns associated with different types of undesirable forking?\\}
 
-\subsubsection*{R.O. 1 \hspace{4 mm} Do forks leave traces in the collaboration artifacts of open source projects in the period leading up to the fork?\\}
+\subsubsection{\hspace{4 mm} Do forks leave traces in the collaboration artifacts of open source projects in the period leading up to the fork?\\}
 
 To study the properties of possible social patterns, we need to verify their existence. More specifically, we need to check whether the possible social patterns are manifested in the the collaboration artifacts of open source projects, e.g., mailing list data, issue tracking systems data, source code data. This is going to be accomplished by statistical modeling of developer interactions as explained in more detail in section \ref{methodology}.
 
-\subsubsection*{R.O. 2 \hspace{4 mm} Do different types of forks leave different types of traces?\\}
+\subsubsection{\hspace{4 mm} Do different types of forks leave different types of traces?\\}
 
 If forks leave traces in the collaboration artifacts, do forks exhibit different social patterns? Are there patterns that exemplify these categories? For example, is there a prototypical ``personal differences'' fork collaboration pattern? If so, do different forking reasons have distinctly different social patterns associated with them? Is a project labeled as a ``technical differences'' fork only a ``technical differences'' fork? Or, alternatively, can they be a mix of several reason categories?
 
 We are going to investigate this by statistical modeling of the interaction graphs, as explained in detail in section \ref{statisticalModel}.
 
-\subsubsection*{R.O. 3 \hspace{4 mm} What are the key indicators that let us distinguish between different types of forks?\\}
+\subsubsection{\hspace{4 mm} What are the key indicators that let us distinguish between different types of forks?\\}
 
-What quantitative measure(s) can be used as an early warning sign of an inflection point (fork)? Is there a metric that can be used to monitor the odds of change, (e.g. forking-related patterns), ahead of time? This will be accomplished by statistical modeling of developer interactions as explained in more detail in section \ref{methodology}.
+What quantitative measure(s) can be used as an early warning sign of an inflection point (fork)? Are there metrics that can be used to monitor the odds of change, (e.g. forking-related patterns), ahead of time? This will be accomplished by statistical modeling of developer interactions as explained in more detail in section \ref{methodology}.
 
 %\subsubsection*{R.Q. 4 \hspace{4 mm} Does our analysis match what people in the community remember?\\} 
 %
@@ -588,7 +588,7 @@ Given the parameter estimates $\hat{\beta_a}$ and $\hat{\beta_b}$, and their sta
 \subsubsection{Multivariate Analysis of Variance Between Multiple Groups}
 To test the statistical significance of the mean differences between groups (in our case, the different categories of forking), we may use Multivariate Analysis of Variance (MANOVA) method. In contrast to ANOVA, MANOVA method tests for the difference in two or more vectors of means. 
 
-
+\subsection{Research Questions}
 
 \pagebreak
 
