--- a/report.tex
+++ b/report.tex
@@ -591,13 +591,13 @@ To test the statistical significance of the mean differences between groups (in 
 \subsection{Research Questions and Hypotheses}
 
 \subsubsection{Null Hypothesis \# 1:} 
-There are no statistically significant differences in vectors of means of the actor-oriented model of longitudinal changes of software projects in H.F. category and No.F. category.
+There are no statistically significant differences in vectors of means of the actor-oriented model of longitudinal changes of software projects in U.F. category and No.F. category.
 
 \subsubsection{Null Hypothesis \# 2:} 
-There are no statistically significant differences in vectors of means of the actor-oriented model of longitudinal changes of software projects in O.F. category and No.F. category.
+There are no statistically significant differences in vectors of means of the actor-oriented model of longitudinal changes of software projects in H.F. category and No.F. category.
 
 \subsubsection{Null Hypothesis \# 3:} 
-There are no statistically significant differences in vectors of means of the actor-oriented model of longitudinal changes of software projects in H.F. category and O.F. category.
+There are no statistically significant differences in vectors of means of the actor-oriented model of longitudinal changes of software projects in U.F. category and H.F. category.
 
 
 
