--- a/report.tex
+++ b/report.tex
@@ -273,7 +273,7 @@ To find projects in U.F. and H.F. categories, we looked at the list of all signi
 GNU Emacs & X Emacs & 1991, ? & Only after 2000 & U.A. \\ \hline
 NetBSD & OpenBSD & 1995, Oct & Yes, but scarce & U.A. \\ \hline
 xMule & aMule & 2003, Aug & Only 2006-2007 & U.A. \\ \hline
-lMule & xMule & 2003, Jun & No & N/A \\ \hline
+lMule & xMule & 2003, Jun & No & U.A. \\ \hline
 Sodipodi & Inkscape & 2003, Nov & Yes & U.A.\\ \hline
 Nucleus CMS & Blog:CMS & 2004, May & Only after Sept 2004 & U.A. \\ \hline
 BMP & Audacious & 2005, Oct & Yes & U.A. \\ \hline
