--- a/report.tex
+++ b/report.tex
@@ -13,7 +13,6 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{float}
 \usepackage{mathtools}
-
 \usepackage{xparse}
 
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
@@ -73,7 +72,20 @@ Prof. Drew Gerkey\\
 \maketitle
 
 \section{Abstract}
-Social networks are a ubiquitous part of our lives, and the creation of online social communities has been a natural extension of this phenomena. Free and Open Source Software (FOSS) development efforts are prime examples of how communities can be leveraged in software development, where group are formed around communities of interest, and depend on continued interest and involvement. Forking, either as an acrimonious split or a friendly divide, affects the community. Most existing research on forking is post-hoc. The run-up to fork is seldom studied. This leaves several questions unanswered. In this study, we propose using statistical modeling of longitudinal social collaboration graphs of software developers to study the evolution and social dynamics of FOSS communities. With these techniques we aim to identify measures for influence and the shift of influence, measures associated with unhealthy group dynamics, for example a simmering conflict, in addition to early indicators of major events in the lifespan of a community. One set of dynamics we are especially interested in, are those that lead FOSS projects to fork. This will help predict formation of unhealthy dynamics, which gives the community a heads-up when they can still take action to ensure the sustainability of the project.
+
+
+
+Social interactions are a ubiquitous part of our lives, and the creation of online social communities has been a natural extension of this phenomena.
+
+Free and Open Source Software (FOSS) development efforts are prime examples of how communities can be leveraged in software development, where group are formed around communities of interest, and depend on continued interest and involvement. 
+
+Forking, either as an non-friendly split or a friendly divide, affects the community. Most existing research on forking is post-hoc. 
+
+The run-up to fork is seldom studied. This leaves several questions unanswered. 
+
+In this study, we propose using statistical modeling of longitudinal social collaboration graphs of software developers to study the evolution and social dynamics of FOSS communities. With these techniques we aim to identify measures for influence and the shift of influence, measures associated with unhealthy group dynamics, for example a simmering conflict, in addition to early indicators of major events in the lifespan of a community. One set of dynamics we are especially interested in, are those that lead FOSS projects to fork. 
+
+This may help predict formation of unhealthy dynamics, which gives the community a heads-up when they can still take action to ensure the sustainability of the project.
 
 
 \section{Introduction}
